--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -3,6 +3,8 @@
 @import "../base/reset";
 @import "../base/base";
 @import "../config";
+@import "../mixin";
+@import "../animation";
 @import "../common";
 @import "./index/top";
 @import "./index/about";
