--- a/scss/pages/index/_about.scss
+++ b/scss/pages/index/_about.scss
@@ -3,6 +3,12 @@
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
+
+    @include mq(tb){
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 100px;
+    }
   }
   
   &_img{
@@ -14,12 +20,21 @@
       object-fit: cover;
       object-position: left center;
     }
+    
+    @include mq(tb){
+      margin-bottom: 30px;
+    }
   }
   
   &_text {
     position: relative;
     margin-left: 26px;
-    width: 530px;
+    max-width: 530px;
+    z-index: 1;
+
+    @include mq(tb){
+      margin-left: 0;
+    }
 
     h3 {
       display: inline-block;
@@ -27,12 +42,22 @@
       border-bottom: 1px solid $cLight_Blue;
       font-size: 36px;
       line-height: 1;
+      @include mq(sp){
+        font-size: 30px;
+      }
     }
 
     .link_btn {
       position: absolute;
       right: 0;
       bottom: 0;
+
+      @include mq(tb){
+        bottom: -70px;
+      }
+      @include mq(sp){
+        right: calc(50% - 64px);
+      }
     }
   }
 }
