--- a/css/profile.css
+++ b/css/profile.css
@@ -114,6 +114,13 @@ body {
   font-size: 18px;
   font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", "游ゴシック", "Yu Gothic", "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
   line-height: 1.8;
+  position: relative;
+  z-index: 1;
+}
+@media screen and (max-width: 480px) {
+  body {
+    font-size: 14px;
+  }
 }
 
 main {
@@ -143,9 +150,26 @@ h1 {
   color: #fff;
   font-size: 80px;
 }
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 50px;
+  }
+}
+@media screen and (max-width: 480px) {
+  h1 {
+    width: 250px;
+    text-align: center;
+    line-height: 2;
+  }
+}
 
 h2 {
   font-size: 60px;
+}
+@media screen and (max-width: 480px) {
+  h2 {
+    font-size: 50px;
+  }
 }
 
 nav {
@@ -155,18 +179,75 @@ nav a {
   color: #fff;
 }
 
+.openbtn {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .openbtn {
+    position: relative;
+    z-index: 9999;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: 3px solid #fff;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .openbtn span {
+    position: absolute;
+    left: 14px;
+    display: inline-block;
+    width: 45%;
+    height: 3px;
+    border-radius: 2px;
+    background-color: #fff;
+    transition: all 0.4s;
+  }
+  .openbtn span:nth-of-type(1) {
+    top: 15px;
+  }
+  .openbtn span:nth-of-type(2) {
+    top: 23px;
+  }
+  .openbtn span:nth-of-type(3) {
+    top: 31px;
+  }
+  .openbtn.active {
+    border: 3px solid #144E94;
+  }
+  .openbtn.active span {
+    background-color: #144E94;
+  }
+  .openbtn.active span:nth-of-type(1) {
+    top: 18px;
+    left: 18px;
+    width: 30%;
+    transform: translateY(6px) rotate(-45deg);
+  }
+  .openbtn.active span:nth-of-type(2) {
+    opacity: 0;
+  }
+  .openbtn.active span:nth-of-type(3) {
+    top: 30px;
+    left: 18px;
+    width: 30%;
+    transform: translateY(-6px) rotate(45deg);
+  }
+}
 header {
+  position: fixed;
+  z-index: 999;
   width: 100%;
   height: 84.39px;
-  position: fixed;
 }
 
 .header_wrapper {
-  width: 92%;
-  padding: 10px 4% 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 10px 4% 0;
+  width: 92%;
 }
 .header_wrapper nav li {
   display: inline-block;
@@ -176,10 +257,53 @@ header {
   margin-right: 0;
 }
 
+@media screen and (max-width: 768px) {
+  #g-nav {
+    position: fixed;
+    top: -120%;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+    height: 100vh;
+    background-color: #fff;
+    transition: all 0.6s;
+  }
+  #g-nav.panelactive {
+    top: 0;
+  }
+  #g-nav ul {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 999;
+    transform: translate(-50%, -50%);
+  }
+  #g-nav li {
+    display: block;
+    padding: 10px;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-weight: bold;
+    font-size: 36px;
+  }
+  #g-nav a {
+    color: #144E94;
+  }
+}
+@media screen and (max-width: 480px) {
+  #g-nav li {
+    font-size: 24px;
+  }
+}
 .wrapper {
-  padding: 10vh 2%;
   margin: 0 auto;
+  padding: 10vh 2%;
   max-width: 1100px;
+}
+@media screen and (max-width: 480px) {
+  .wrapper {
+    padding: 10vh 6%;
+  }
 }
 
 .section_title {
@@ -200,18 +324,31 @@ header {
   border: 1px solid #000;
 }
 .link_btn a {
-  font-weight: bold;
   color: #144E94;
+  font-weight: bold;
 }
 
 .contact {
   background-color: rgba(20, 78, 148, 0.2);
+}
+.contact .section_title > p > span, .contact label > span {
+  color: #880000;
+}
+.contact .section_title p {
+  margin: 0 auto;
+  width: 260px;
 }
 .contact_form {
   position: relative;
   margin: 0 auto;
   width: 600px;
   height: 500px;
+}
+@media screen and (max-width: 768px) {
+  .contact_form {
+    padding-bottom: 150px;
+    width: 300px;
+  }
 }
 .contact_form_title {
   width: 200px;
@@ -225,6 +362,18 @@ header {
   height: 40px;
   font-size: 18px;
 }
+@media screen and (max-width: 768px) {
+  .contact_form_box {
+    position: initial;
+  }
+}
+@media screen and (max-width: 480px) {
+  .contact_form_box {
+    box-sizing: border-box;
+    width: 300px;
+    height: 46px;
+  }
+}
 .contact_form_textarea {
   position: absolute;
   right: 0;
@@ -233,8 +382,32 @@ header {
   height: 200px;
   font-size: 18px;
 }
+@media screen and (max-width: 768px) {
+  .contact_form_textarea {
+    position: initial;
+  }
+}
+@media screen and (max-width: 480px) {
+  .contact_form_textarea {
+    box-sizing: border-box;
+    width: 300px;
+  }
+}
 .contact_box {
   margin-bottom: 25px;
+}
+@media screen and (max-width: 768px) {
+  .contact_box {
+    position: relative;
+    left: calc(50% - 182px);
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 480px) {
+  .contact_box {
+    left: calc(50% - 150px);
+  }
 }
 .contact_box:last-child {
   margin-bottom: 0;
@@ -252,19 +425,31 @@ header {
   font-size: 18px;
   cursor: pointer;
 }
+@media screen and (max-width: 768px) {
+  .contact_btn {
+    bottom: -20px;
+  }
+}
 
 footer {
   background-color: #082F50;
 }
 footer p {
-  font-size: 12px;
+  padding: 20px 0;
   color: #fff;
   text-align: center;
-  padding: 20px 0;
+  font-size: 12px;
 }
 
 nav a {
   color: #144E94;
+}
+
+.openbtn {
+  border: 3px solid #144E94;
+}
+.openbtn span {
+  background-color: #144E94;
 }
 
 .profile {
@@ -274,10 +459,17 @@ nav a {
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  width: 900px;
+  max-width: 900px;
+}
+@media screen and (max-width: 768px) {
+  .profile_box {
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 50px;
+  }
 }
 .profile_text {
-  width: 580px;
+  max-width: 580px;
 }
 .profile_text_content {
   margin-bottom: 24px;
@@ -290,9 +482,19 @@ nav a {
   font-size: 36px;
   line-height: 1;
 }
+@media screen and (max-width: 480px) {
+  .profile_text_content h3 {
+    font-size: 30px;
+  }
+}
 .profile_text_content h4 {
   color: #144E94;
   font-size: 24px;
+}
+@media screen and (max-width: 480px) {
+  .profile_text_content h4 {
+    font-size: 20px;
+  }
 }
 .profile_img {
   width: 250px;
