--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -1,18 +1,19 @@
 header {
-  width: 100%;
-  height: 84.39px;
   // background-color: $cWhite;
   position: fixed;
+  z-index: 999;
+  width: 100%;
+  height: 84.39px;
 }
 
 .header {
   &_wrapper {
-    // background-color: $cBlue_thin;
-    width: 92%;
-    padding: 10px 4% 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 10px 4% 0;
+    // background-color: $cBlue_thin;
+    width: 92%;
 
     nav {
       li {
@@ -26,10 +27,59 @@ header {
   }
 }
 
+@include mq(tb){
+  #g-nav {
+    position: fixed;
+    top: -120%;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+    height: 100vh;
+    background-color: $cWhite;
+    transition:  all .6s;
+
+    &.panelactive{
+      top: 0;
+    }
+
+    ul {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      z-index: 999;
+      transform: translate(-50%,-50%);
+    }
+
+    li{
+      display: block;
+      padding: 10px;
+      text-transform: uppercase;
+      letter-spacing: .1em;
+      font-weight: bold;
+      font-size: 36px;
+    }
+    
+    a{
+      color: $cBlue;
+    }
+  }
+}
+
+@include mq(sp){
+  #g-nav{
+    li {
+      font-size: 24px;
+    }
+  }
+}
+
 .wrapper {
-  padding: 10vh 2%;
   margin: 0 auto;
+  padding: 10vh 2%;
   max-width: 1100px;
+  @include mq(sp){
+    padding: 10vh 6%;
+  }
 }
 
 .section_title{
@@ -51,19 +101,32 @@ header {
   padding: 10px 20px;
   border: 1px solid $cBlack;
   a {
-    font-weight: bold;
     color: $cBlue;
+    font-weight: bold;
   }
 }
 
 .contact {
   background-color: $cBlue_contact;
 
+  .section_title>p>span, label>span{
+    color: $cRed;
+  }
+
+  .section_title p {
+    margin: 0 auto;
+    width: 260px;
+  }
   &_form {
     position: relative;
     margin: 0 auto;
     width: 600px;
     height: 500px;
+
+    @include mq(tb){
+      padding-bottom: 150px;
+      width: 300px;
+      }
 
     &_title {
       width: 200px;
@@ -77,6 +140,15 @@ header {
       width: 350px;
       height: 40px;
       font-size: 18px;
+
+      @include mq(tb){
+        position: initial;
+      }
+      @include mq(sp){
+        box-sizing: border-box;
+        width: 300px;
+        height: 46px;
+      }
     }
 
     &_textarea {
@@ -86,11 +158,29 @@ header {
       width: 346px;
       height: 200px;
       font-size: 18px;
+
+      @include mq(tb){
+        position: initial;
+      }
+      @include mq(sp){
+        box-sizing: border-box;
+        width: 300px;
+      }
     }
   }
 
   &_box {
     margin-bottom: 25px;
+
+    @include mq(tb){
+      position: relative;
+      left: calc(50% - 182px);
+      display: flex;
+      flex-direction: column;
+    }
+    @include mq(sp){
+      left: calc(50% - 150px);
+    }
 
     &:last-child {
       margin-bottom: 0;
@@ -109,15 +199,19 @@ header {
     font-weight: bold;
     font-size: 18px;
     cursor: pointer;
+
+    @include mq(tb){
+      bottom: -20px;
+    }
   }
 }
 
 footer {
   background-color: $cBlue_footer;
   p {
-    font-size: 12px;
+    padding: 20px 0;
     color: $cWhite;
     text-align: center;
-    padding: 20px 0;
+    font-size: 12px;
   }
 }
