--- a/scss/pages/index/_service.scss
+++ b/scss/pages/index/_service.scss
@@ -6,6 +6,9 @@
       margin-bottom: 8px;
       border-bottom: 3px solid $cLight_Blue;
       font-size: 24px;
+      @include mq(sp){
+        font-size: 20px;
+      }
     }
 
     p {
@@ -15,6 +18,11 @@
 
   &_content{
     position: relative;
+    @include mq(pc){
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
     
     &_item{
       display: inline-block;
@@ -23,6 +31,10 @@
       border: 1px solid $cBlack;
       background-color: $cWhite;
       text-align: center;
+
+      @include mq(sp){
+        padding: 20px;
+      }
     }
 
     .item1{
@@ -30,16 +42,30 @@
       z-index: 2;
       display: block;
       margin: 0 auto;
+      @include mq(pc){
+        margin-bottom: 30px;
+      }
+      @include mq(sp){
+        left: -1.5%;
+      }
     }
 
     .item2{
       margin-top: -200px;
+      @include mq(pc){
+        margin-top: 0;
+        margin-bottom: 30px;
+      }
     }
     
     .item3{
       position: absolute;
       right: 0;
       margin-top: -200px;
+      @include mq(pc){
+        margin-top: 0;
+        position: initial;
+      }
     }
   }
 }
