--- a/scss/pages/works.scss
+++ b/scss/pages/works.scss
@@ -3,10 +3,90 @@
 @import "../base/reset";
 @import "../base/base";
 @import "../config";
+@import "../mixin";
+@import "../animation";
 @import "../common";
 
 nav {
   a{
     color: $cBlue;
+  }
+}
+
+.openbtn {
+  border: 3px solid $cBlue;
+
+  span {
+    background-color: $cBlue;
+  }
+}
+
+.work {
+  padding-top: 100px;
+
+  @include mq(tb){
+    padding-top: 50px;
+  }
+  
+  .section_title {
+    margin-bottom: 20vh;
+    @include mq(tb){
+      margin-bottom: 50px;
+    }
+  }
+
+  &_item {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1000px;
+    margin: 0 auto 30vh;
+    @include mq(tb){
+      flex-direction: column-reverse;
+      align-items: center;
+      gap: 50px;
+      margin-bottom: 10vh;
+    }
+    
+    &:last-child {
+      margin-bottom: 10vh;
+    }
+
+    &_text {
+      max-width: 550px;
+      padding-right: 50px;
+      @include mq(tb){
+        padding-right: 0;
+      }
+
+      &_content {
+        margin-bottom: 30px;
+      }
+      h3 {
+        font-size: 24px;
+        border-left: 3px solid $cLight_Blue;
+        line-height: 1.4;
+        padding-left: 8px;
+        margin-bottom: 8px;
+        @include mq(sp){
+          font-size: 20px;
+        }
+      }
+      h4 {
+        font-size: 24px;
+        font-weight: normal;
+        @include mq(sp){
+          font-size: 20px;
+        }
+      }
+    }
+
+    &_img {
+      max-width: 380px;
+      height: 240px;
+      img {
+
+        object-fit: cover;
+      }
+    }
   }
 }
