--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -3,6 +3,7 @@ $cWhite: #fff;
 $cLight_Blue: #00FFFA;
 $cBlue: #144E94;
 $cBlue_thin: rgba(20, 78, 148, 0.68);
+$cBlue_top: rgba(20, 78, 148, 0.4);
 $cBlue_contact: rgba(20, 78, 148, .2);
 $cBlue_footer: #082F50;
 $cRed: #880000;
