--- a/css/index.css
+++ b/css/index.css
@@ -127,6 +127,10 @@ main {
   width: 100%;
 }
 
+section {
+  background-color: #fff;
+}
+
 a {
   color: #000;
   text-decoration: none;
@@ -235,19 +239,154 @@ nav a {
     transform: translateY(-6px) rotate(45deg);
   }
 }
+.blur {
+  -webkit-animation-name: blurAnime;
+          animation-name: blurAnime;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes blurAnime {
+  from {
+    opacity: 0;
+    filter: blur(10px);
+    transform: scale(1.02);
+  }
+  to {
+    opacity: 1;
+    filter: blur(0);
+    transform: scale(1);
+  }
+}
+
+@keyframes blurAnime {
+  from {
+    opacity: 0;
+    filter: blur(10px);
+    transform: scale(1.02);
+  }
+  to {
+    opacity: 1;
+    filter: blur(0);
+    transform: scale(1);
+  }
+}
+.blurTrigger {
+  opacity: 0;
+}
+
+.zoomIn {
+  -webkit-animation-name: zoomInAnime;
+          animation-name: zoomInAnime;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes zoomInAnime {
+  from {
+    opacity: 0;
+    transform: scale(0.6);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes zoomInAnime {
+  from {
+    opacity: 0;
+    transform: scale(0.6);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+.zoomInTrigger {
+  opacity: 0;
+}
+
+.fadeUp {
+  opacity: 0;
+  -webkit-animation-name: fadeUpAnime;
+          animation-name: fadeUpAnime;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes fadeUpAnime {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeUpAnime {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.fadeUpTrigger {
+  opacity: 0;
+}
+
+#g-nav li a {
+  position: relative;
+}
+#g-nav li a::after {
+  position: absolute;
+  bottom: 0;
+  left: 10%;
+  width: 80%;
+  height: 2px;
+  background-color: #fff;
+  content: "";
+  transition: all 0.3s;
+  transform: scale(0, 1);
+  transform-origin: center top;
+}
+#g-nav li a:hover::after {
+  transform: scale(1, 1);
+}
+
 header {
   position: fixed;
   z-index: 999;
   width: 100%;
-  height: 84.39px;
+  height: 70px;
 }
 
+.header_img2 {
+  display: none;
+}
 .header_wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px 4% 0;
   width: 92%;
+}
+.header_wrapper > a {
+  line-height: 1;
+}
+.header_wrapper img {
+  width: 100px;
 }
 .header_wrapper nav li {
   display: inline-block;
@@ -295,6 +434,29 @@ header {
     font-size: 24px;
   }
 }
+header.change-color {
+  background-color: white;
+  transition: 0.3s;
+}
+header.change-color #g-nav li a {
+  color: #144E94;
+}
+header.change-color #g-nav li a::after {
+  background-color: #144E94;
+}
+header.change-color .header_img1 {
+  display: none;
+}
+header.change-color .header_img2 {
+  display: block;
+}
+header.change-color .openbtn {
+  border: 3px solid #144E94;
+}
+header.change-color .openbtn span {
+  background-color: #144E94;
+}
+
 .wrapper {
   margin: 0 auto;
   padding: 10vh 2%;
@@ -320,16 +482,20 @@ header {
 
 .link_btn {
   display: inline-block;
-  padding: 10px 20px;
   border: 1px solid #000;
 }
 .link_btn a {
   color: #144E94;
   font-weight: bold;
+  display: block;
+  padding: 10px 40px;
 }
 
-.contact {
+.contact_container {
   background-color: rgba(20, 78, 148, 0.2);
+}
+.contact .wrapper {
+  padding: 5vh 2%;
 }
 .contact .section_title > p > span, .contact label > span {
   color: #880000;
@@ -417,15 +583,21 @@ header {
 .contact_btn {
   position: absolute;
   bottom: 0;
-  left: calc(50% - 63px);
+  left: calc(50% - 78px);
   display: inline-block;
-  padding: 10px 40px;
+  padding: 12px 55px;
   border: 1px solid #000;
+  border-radius: 32px;
   background-color: #fff;
   color: #144E94;
   font-weight: bold;
   font-size: 18px;
   cursor: pointer;
+}
+.contact_btn:hover {
+  cursor: pointer;
+  background-color: #144E94;
+  color: #fff;
 }
 @media screen and (max-width: 768px) {
   .contact_btn {
@@ -444,11 +616,31 @@ footer p {
 }
 
 .top {
+  position: relative;
+  background-color: transparent;
+  height: 100vh;
+}
+.top_title {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: fixed;
+  background-color: rgba(20, 78, 148, 0.4);
+  width: 100%;
   height: 100vh;
-  background-color: rgba(20, 78, 148, 0.68);
+  z-index: -1;
+}
+.top_wrap {
+  position: fixed;
+  z-index: -5;
+  width: 100vw;
+  height: 100vh;
+}
+.top_wrap video {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .about_content {
@@ -503,18 +695,24 @@ footer p {
   }
 }
 .about_text .link_btn {
+  text-align: center;
+  font-size: 16px;
+  border-radius: 32px;
   position: absolute;
   right: 0;
   bottom: 0;
 }
+.about_text .link_btn:hover {
+  cursor: pointer;
+  background-color: #144E94;
+}
+.about_text .link_btn:hover a {
+  color: #fff;
+}
 @media screen and (max-width: 768px) {
   .about_text .link_btn {
     bottom: -70px;
-  }
-}
-@media screen and (max-width: 480px) {
-  .about_text .link_btn {
-    right: calc(50% - 64px);
+    right: calc(50% - 81px);
   }
 }
 
@@ -686,7 +884,6 @@ footer p {
   position: relative;
   margin: 0 auto;
   padding-bottom: 200px;
-  max-width: 800px;
 }
 @media screen and (max-width: 768px) {
   .work_content {
@@ -697,7 +894,7 @@ footer p {
   display: flex;
   justify-content: space-between;
   margin: 100px auto 0;
-  max-width: 800px;
+  max-width: 1000px;
 }
 @media screen and (max-width: 768px) {
   .work_list {
@@ -712,8 +909,13 @@ footer p {
   }
 }
 .work_item_img {
-  max-width: 350px;
-  height: 240px;
+  max-width: 450px;
+  height: 277px;
+}
+@media screen and (max-width: 480px) {
+  .work_item_img {
+    height: auto;
+  }
 }
 .work_item_img img {
   height: 100%;
@@ -730,11 +932,20 @@ footer p {
 }
 .work .link_btn {
   position: absolute;
-  right: 0;
+  right: 50px;
   bottom: 70px;
+  font-size: 16px;
+  border-radius: 32px;
+}
+.work .link_btn:hover {
+  cursor: pointer;
+  background-color: #144E94;
+}
+.work .link_btn:hover a {
+  color: #fff;
 }
 @media screen and (max-width: 768px) {
   .work .link_btn {
-    right: calc(50% - 76px);
+    right: calc(50% - 90px);
   }
 }
