--- a/css/profile.css
+++ b/css/profile.css
@@ -127,6 +127,10 @@ main {
   width: 100%;
 }
 
+section {
+  background-color: #fff;
+}
+
 a {
   color: #000;
   text-decoration: none;
@@ -235,19 +239,154 @@ nav a {
     transform: translateY(-6px) rotate(45deg);
   }
 }
+.blur {
+  -webkit-animation-name: blurAnime;
+          animation-name: blurAnime;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes blurAnime {
+  from {
+    opacity: 0;
+    filter: blur(10px);
+    transform: scale(1.02);
+  }
+  to {
+    opacity: 1;
+    filter: blur(0);
+    transform: scale(1);
+  }
+}
+
+@keyframes blurAnime {
+  from {
+    opacity: 0;
+    filter: blur(10px);
+    transform: scale(1.02);
+  }
+  to {
+    opacity: 1;
+    filter: blur(0);
+    transform: scale(1);
+  }
+}
+.blurTrigger {
+  opacity: 0;
+}
+
+.zoomIn {
+  -webkit-animation-name: zoomInAnime;
+          animation-name: zoomInAnime;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes zoomInAnime {
+  from {
+    opacity: 0;
+    transform: scale(0.6);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes zoomInAnime {
+  from {
+    opacity: 0;
+    transform: scale(0.6);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+.zoomInTrigger {
+  opacity: 0;
+}
+
+.fadeUp {
+  opacity: 0;
+  -webkit-animation-name: fadeUpAnime;
+          animation-name: fadeUpAnime;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes fadeUpAnime {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeUpAnime {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.fadeUpTrigger {
+  opacity: 0;
+}
+
+#g-nav li a {
+  position: relative;
+}
+#g-nav li a::after {
+  position: absolute;
+  bottom: 0;
+  left: 10%;
+  width: 80%;
+  height: 2px;
+  background-color: #fff;
+  content: "";
+  transition: all 0.3s;
+  transform: scale(0, 1);
+  transform-origin: center top;
+}
+#g-nav li a:hover::after {
+  transform: scale(1, 1);
+}
+
 header {
   position: fixed;
   z-index: 999;
   width: 100%;
-  height: 84.39px;
+  height: 70px;
 }
 
+.header_img2 {
+  display: none;
+}
 .header_wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px 4% 0;
   width: 92%;
+}
+.header_wrapper > a {
+  line-height: 1;
+}
+.header_wrapper img {
+  width: 100px;
 }
 .header_wrapper nav li {
   display: inline-block;
@@ -295,6 +434,29 @@ header {
     font-size: 24px;
   }
 }
+header.change-color {
+  background-color: white;
+  transition: 0.3s;
+}
+header.change-color #g-nav li a {
+  color: #144E94;
+}
+header.change-color #g-nav li a::after {
+  background-color: #144E94;
+}
+header.change-color .header_img1 {
+  display: none;
+}
+header.change-color .header_img2 {
+  display: block;
+}
+header.change-color .openbtn {
+  border: 3px solid #144E94;
+}
+header.change-color .openbtn span {
+  background-color: #144E94;
+}
+
 .wrapper {
   margin: 0 auto;
   padding: 10vh 2%;
@@ -320,16 +482,20 @@ header {
 
 .link_btn {
   display: inline-block;
-  padding: 10px 20px;
   border: 1px solid #000;
 }
 .link_btn a {
   color: #144E94;
   font-weight: bold;
+  display: block;
+  padding: 10px 40px;
 }
 
-.contact {
+.contact_container {
   background-color: rgba(20, 78, 148, 0.2);
+}
+.contact .wrapper {
+  padding: 5vh 2%;
 }
 .contact .section_title > p > span, .contact label > span {
   color: #880000;
@@ -417,15 +583,21 @@ header {
 .contact_btn {
   position: absolute;
   bottom: 0;
-  left: calc(50% - 63px);
+  left: calc(50% - 78px);
   display: inline-block;
-  padding: 10px 40px;
+  padding: 12px 55px;
   border: 1px solid #000;
+  border-radius: 32px;
   background-color: #fff;
   color: #144E94;
   font-weight: bold;
   font-size: 18px;
   cursor: pointer;
+}
+.contact_btn:hover {
+  cursor: pointer;
+  background-color: #144E94;
+  color: #fff;
 }
 @media screen and (max-width: 768px) {
   .contact_btn {
@@ -443,28 +615,42 @@ footer p {
   font-size: 12px;
 }
 
-header {
-  background-color: #fff;
+.top {
+  height: 100vh;
+  background-color: transparent;
+}
+.top_wrapper {
+  background-image: url("/images/profile.jpg");
+  background-repeat: no-repeat;
+  background-position: 70% 50%;
+  background-size: cover;
+  position: fixed;
+  z-index: -3;
+  width: 100%;
+}
+.top_filter {
+  background-color: rgba(20, 78, 148, 0.4);
+}
+.top_title {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+.top_title h1 {
+  line-height: 2;
+}
+.top_title span {
+  color: #fff;
+  font-size: 24px;
 }
 
-nav a {
-  color: #144E94;
-}
-
-.openbtn {
-  border: 3px solid #144E94;
-}
-.openbtn span {
-  background-color: #144E94;
-}
-
-.profile {
-  padding-top: 100px;
-}
 .profile_box {
   display: flex;
   justify-content: space-between;
-  margin: 0 auto;
+  margin: 100px auto 0;
   max-width: 900px;
 }
 @media screen and (max-width: 768px) {
@@ -478,7 +664,10 @@ nav a {
   max-width: 580px;
 }
 .profile_text_content {
-  margin-bottom: 24px;
+  margin-bottom: 40px;
+}
+.profile_text_content:first-child {
+  padding-top: 50px;
 }
 .profile_text_content h3 {
   display: inline-block;
