--- a/scss/_animation.scss
+++ b/scss/_animation.scss
@@ -1,3 +1,4 @@
+// ハンバーガーメニュー
 .openbtn {
   display: none;
 }
@@ -55,6 +56,105 @@
           width: 30%;
           transform: translateY(-6px) rotate(45deg);
         }
+      }
+    }
+  }
+}
+
+
+// フェードインアニメーション
+.blur {
+  animation-name: blurAnime;
+  animation-duration: 1s;
+
+  animation-fill-mode: forwards;
+}
+
+@keyframes blurAnime {
+  from {
+    opacity: 0;
+    filter: blur(10px);
+    transform: scale(1.02);
+  }
+  to {
+    opacity: 1;
+    filter: blur(0);
+    transform: scale(1);
+  }
+}
+
+.blurTrigger {
+  opacity: 0;
+}
+
+
+.zoomIn {
+  animation-name: zoomInAnime;
+  animation-duration: 0.5s;
+
+  animation-fill-mode: forwards;
+}
+
+@keyframes zoomInAnime {
+  from {
+    opacity: 0;
+    transform: scale(0.6);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.zoomInTrigger {
+  opacity: 0;
+}
+
+.fadeUp {
+  opacity: 0;
+  animation-name: fadeUpAnime;
+  animation-duration: 1s;
+
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeUpAnime {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.fadeUpTrigger {
+  opacity: 0;
+}
+
+
+// テキストナビゲーション
+#g-nav {
+  li {
+    a {
+      position: relative;
+
+      &::after {
+        position: absolute;
+        bottom: 0;
+        left: 10%;
+        width: 80%;
+        height: 2px;
+        background-color: $cWhite;
+        content: '';
+        transition: all .3s;
+        transform: scale(0,1);
+        transform-origin: center top;
+      }
+
+      &:hover::after {
+        transform: scale(1,1);
       }
     }
   }
