--- a/scss/pages/index/_top.scss
+++ b/scss/pages/index/_top.scss
@@ -1,7 +1,30 @@
 .top {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
+  background-color: transparent;
   height: 100vh;
-  background-color: $cBlue_thin;
+  
+  &_title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    background-color: $cBlue_top;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+  }
+  
+  &_wrap {
+    position: fixed;
+    z-index: -5;
+    width: 100vw;
+    height: 100vh;
+
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+
+    }
+  }
 }
