--- a/scss/pages/index/_works.scss
+++ b/scss/pages/index/_works.scss
@@ -3,7 +3,6 @@
     position: relative;
     margin: 0 auto;
     padding-bottom: 200px;
-    max-width: 800px;
     @include mq(tb){
       padding-bottom: 130px;
     }
@@ -13,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     margin: 100px auto 0;
-    max-width: 800px;
+    max-width: 1000px;
     
     @include mq(tb){
       margin-top: 50px;
@@ -27,8 +26,13 @@
     }
 
     &_img{
-      max-width: 350px;
-      height: 240px;
+      max-width: 450px;
+      height: 277px;
+
+      @include mq(sp){
+        height: auto;
+      }
+
       img{
         height: 100%;
 
@@ -48,11 +52,21 @@
 
   .link_btn {
     position: absolute;
-    right: 0;
+    right: 50px;
     bottom: 70px;
+    font-size: 16px;
+    border-radius: 32px;
+
+    &:hover {
+      cursor: pointer;
+      background-color: $cBlue;
+      a {
+        color: $cWhite;
+      }
+    }
     
     @include mq(tb){
-      right: calc(50% - 76px);
+      right: calc(50% - 90px);
     }
   }
 }
