--- a/scss/pages/profile.scss
+++ b/scss/pages/profile.scss
@@ -7,31 +7,50 @@
 @import "../animation";
 @import "../common";
 
-header {
-  background-color: $cWhite;
-}
+.top {
+  height: 100vh;
+  background-color: transparent;
 
-nav {
-  a{
-    color: $cBlue;
+  &_wrapper{
+    background-image: url('/images/profile.jpg');
+    background-repeat: no-repeat;
+    background-position: 70% 50%;
+    background-size: cover;
+    position: fixed;
+    z-index: -3;
+    width: 100%;
+  }
+
+  &_filter{
+    background-color: $cBlue_top;
+  }
+
+  &_title {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+
+    h1 {
+      line-height: 2;
+    }
+    
+    span{
+      color: $cWhite;
+      font-size: 24px;
+    }
   }
 }
 
-.openbtn {
-  border: 3px solid $cBlue;
 
-  span {
-    background-color: $cBlue;
-  }
-}
 
 .profile {
-  padding-top: 100px;
-
   &_box {
     display: flex;
     justify-content: space-between;
-    margin: 0 auto;
+    margin: 100px auto 0;
     max-width: 900px;
 
     @include mq(tb){
@@ -45,7 +64,10 @@ nav {
     max-width: 580px;
 
     &_content {
-      margin-bottom: 24px;
+      margin-bottom: 40px;
+      &:first-child {
+        padding-top: 50px;
+      }
 
       h3 {
         display: inline-block;
